--- a/Source/package.json
+++ b/Source/package.json
@@ -1,34 +1,29 @@
 {
   "name": "grafana-plugin-openHistorianAlarm",
+  "version": "1.0.0",
   "author": "Grid Protection Alliance",
   "license": "MIT",
-  "version": "1.0.0",
-  "description": "Alarm panel for device status from openHistorian",
-  "main": "src/module.js",
+  "description": "Panel to Download Data from the openHistorian",
   "scripts": {
-    "build": "webpack"
+    "build": "grafana-toolkit plugin:build",
+    "test": "grafana-toolkit plugin:test",
+    "dev": "grafana-toolkit plugin:dev",
+    "watch": "grafana-toolkit plugin:dev --watch"
   },
-  "keywords": [],
-  "repository": "https://github.com/GridProtectionAlliance/openHistorianGrafanaAlarmPanel",
+  "repository": "github:GridProtectionAlliance/Grafana-oh-datadownload",
+  "bugs": {
+    "url": "https://github.com/GridProtectionAlliance/Grafana-oh-datadownload/issues",
+    "email": "info@GridProtectionAlliance.org"
+  },
   "devDependencies": {
-    "@types/grafana": "git+https://git@github.com/CorpGlory/types-grafana.git",
-    "@types/lodash": "4.14.118",
-    "@types/moment": "^2.13.0",
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
-    "babel-preset-env": "^1.6.0",
-    "clean-webpack-plugin": "^1.0.0",
-    "copy-webpack-plugin": "^5.1.1",
-    "grafana-sdk-mocks": "github:grafana/grafana-sdk-mocks",
-    "loader-utils": "^1.1.0",
-    "ng-annotate-webpack-plugin": "^0.3.0",
-    "ts-loader": "^5.3.0",
-    "typescript": "^2.4.2",
-    "webpack": "^4.41.2",
-    "webpack-cli": "^3.1.2"
+    "@grafana/data": "^7.0.0",
+    "@grafana/toolkit": "^7.0.0",
+    "@grafana/ui": "^7.0.0"
+  },
+  "engines": {
+    "node": ">=12 <13"
   },
   "dependencies": {
-    "lodash": "^4.17.11",
-    "serialize-javascript": ">=2.1.1"
+    "@grafana/runtime": "^7.3.6"
   }
 }
